--- a/index.html
+++ b/index.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>static 1</title>
 </head>
+
 <body>
-<section class="">
-  <nav class="flex justify-between p-3 relative">
-    <a class="w-10" href="#"><img src="/images/workflow-mark-indigo-600.svg"></a>
-    <button class="md:hidden" data-btnOpen="navBtn">
-      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-800" viewBox="0 0 20 20" fill="currentColor">
-        <path fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clip-rule="evenodd" /></svg>
-    </button>
-    <div class="hidden md:hidden absolute bg-indigo-500 w-full h-48" data-nav="nav">
-    <button data-btnClose="closeBtn"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-      </svg></button>
-    </div>
-  </nav>
-</section>
-<script src="js/main.js"></script>
+    <section class="">
+        <nav class="flex justify-between md:justify-start p-3 md:py-8 md:px-12 relative mx-auto">
+            <a class="w-10 mr-6" href="#"><img src="/images/workflow-mark-indigo-600.svg" /></a>
+            <div class="text-lg hidden md:inline-block">
+                <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Product</a>
+                <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Feature</a>
+                <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Markeplace</a>
+                <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Company</a>
+                <a class="text-indigo-800 hover:text-indigo-600 font-normal align-middle cursor-pointer">Log in</a>
+            </div>
+            <button class="md:hidden" data-btnOpen="navBtn" class="">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-gray-600 hover:text-gray-800"
+                    viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd"
+                        d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
+                        clip-rule="evenodd" />
+                </svg>
+            </button>
+            <div class="hidden md:hidden absolute bg-indigo-500 w-full h-48" data-nav="nav">
+                <button data-btnClose="closeBtn">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M6 18L18 6M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+        </nav>
+        <div class="pt-44 pl-16">
+            <h1 class="text-6xl font-bold text-gray-900 w-1/2">
+                Data to enrich your
+                <span class="block text-indigo-700">online business</span>
+            </h1>
+            <p class="font-normal text-gray-500 text-xl mt-4 mb-8 w-1/2 pr-20">
+                Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
+                cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat
+                aliqua.
+            </p>
+            <a class="px-10 py-4 bg-indigo-600 text-white rounded inline-block text-lg font-medium mx-1" href="#">Get started</a>
+            <a class="px-10 py-4 bg-blue-100 text-indigo-700 inline-block text-lg font-medium rounded mx-1" href="#">Live demo</a>
+        </div>
+    </section>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
