--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <body>
     <section class="">
-        <nav class="flex justify-between md:justify-start p-3 md:py-8 md:px-12 relative mx-auto">
+        <nav class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 relative mx-auto">
             <a class="w-10 mr-6" href="#"><img src="/images/workflow-mark-indigo-600.svg" /></a>
-            <div class="text-lg hidden md:inline-block">
+            <div class="text-base lg:text-lg hidden md:inline-block">
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Product</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Feature</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Markeplace</a>
@@ -42,18 +42,22 @@
                 </button>
             </div>
         </nav>
-        <div class="pt-44 pl-16">
-            <h1 class="text-6xl font-bold text-gray-900 w-1/2">
-                Data to enrich your
-                <span class="block text-indigo-700">online business</span>
-            </h1>
-            <p class="font-normal text-gray-500 text-xl mt-4 mb-8 w-1/2 pr-20">
-                Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
-                cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat
-                aliqua.
-            </p>
-            <a class="px-10 py-4 bg-indigo-600 text-white rounded inline-block text-lg font-medium mx-1" href="#">Get started</a>
-            <a class="px-10 py-4 bg-blue-100 text-indigo-700 inline-block text-lg font-medium rounded mx-1" href="#">Live demo</a>
+        <div class="flex h-[87.1vh] flex-wrap items-center">
+            <div class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10">
+                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full pr-10">
+                    Data to enrich your
+                    <span class="block text-indigo-700">online business</span>
+                </h1>
+                <p class="font-normal text-gray-500 text-lg lg:text-xl my-4 w-full pr-20">
+                    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
+                    cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat
+                    aliqua.
+                </p>
+                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white rounded inline-block text-lg font-medium mx-1" href="#">Get started</a>
+                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-blue-100 hover:bg-blue-200 text-indigo-700 inline-block text-lg font-medium rounded mx-1" href="#">Live demo</a>
+                <svg class=" hidden lg:block absolute -right-0 inset-y-0 h-full w-40 z-0 text-white transform translate-x-1/2" fill="currentColor" preserveAspectRatio="none" viewbox="0 0 100 100"><polygon points="50, 0 100,0 50,100 0, 100"></polygon></svg>
+            </div>
+            <img class="w-full lg:w-1/2 inline-block h-96 lg:h-full object-cover flex-shrink" src="./images/photo-1551434678-e076c223a692.webp">
         </div>
     </section>
     <script src="js/main.js"></script>
