--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="">
         <nav class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 relative mx-auto">
-            <a class="w-10 mr-6" href="#"><img src="/images/workflow-mark-indigo-600.svg" /></a>
+            <a class="w-8 mr-6" href="#"><img src="/images/workflow-mark-indigo-600.svg" /></a>
             <div class="text-base lg:text-lg hidden md:inline-block">
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Product</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Feature</a>
@@ -42,22 +42,105 @@
                 </button>
             </div>
         </nav>
-        <div class="flex h-[87.1vh] flex-wrap items-center">
-            <div class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10">
-                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full pr-10">
+        <div class="flex h-auto lg:h-[87.1vh] flex-wrap items-center">
+            <div
+                class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10">
+                <h1 class="text-4xl md:text-6xl font-bold text-gray-900 w-full md:pr-10">
                     Data to enrich your
                     <span class="block text-indigo-700">online business</span>
                 </h1>
-                <p class="font-normal text-gray-500 text-lg lg:text-xl my-4 w-full pr-20">
-                    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem
-                    cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat
-                    aliqua.
+                <p class="font-normal text-gray-500 text-base lg:text-xl my-4 w-full md:pr-20">
+                    Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui
+                    lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat
+                    fugiat aliqua.
                 </p>
-                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white rounded inline-block text-lg font-medium mx-1" href="#">Get started</a>
-                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-blue-100 hover:bg-blue-200 text-indigo-700 inline-block text-lg font-medium rounded mx-1" href="#">Live demo</a>
-                <svg class=" hidden lg:block absolute -right-0 inset-y-0 h-full w-40 z-0 text-white transform translate-x-1/2" fill="currentColor" preserveAspectRatio="none" viewbox="0 0 100 100"><polygon points="50, 0 100,0 50,100 0, 100"></polygon></svg>
+                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-indigo-600 hover:bg-indigo-700 text-white rounded inline-block text-base md:text-lg font-medium mx-1"
+                    href="#">Get started</a>
+                <a class="px-10 py-4 w-full text-center my-2 md:w-auto bg-blue-100 hover:bg-blue-200 text-indigo-700 inline-block text-base md:text-lg font-medium rounded mx-1"
+                    href="#">Live demo</a>
+                <svg class="hidden lg:block absolute -right-0 inset-y-0 h-full w-40 z-0 text-white transform translate-x-1/2"
+                    fill="currentColor" preserveAspectRatio="none" viewbox="0 0 100 100">
+                    <polygon points="50, 0 100,0 50,100 0, 100"></polygon>
+                </svg>
             </div>
-            <img class="w-full lg:w-1/2 inline-block h-96 lg:h-full object-cover flex-shrink" src="./images/photo-1551434678-e076c223a692.webp">
+            <img class="w-full lg:w-1/2 inline-block h-96 lg:h-full object-cover flex-shrink"
+                src="./images/photo-1551434678-e076c223a692.webp" />
+        </div>
+    </section>
+    <section class="px-4 py-6 text-center">
+        <div class="w-auto max-w-3xl mx-auto py-12">
+            <h2 class="text-base text-indigo-700 text-medium md:font-semibold mb-2">
+                TRANSACTION
+            </h2>
+            <h1 class="text-gray-900 text-4xl md:text-5xl font-bold mb-4">A better way to send money</h1>
+            <p class="text-gray-500 text-base md:text-lg font-normal mb-2">
+                Lorem ipsum dolor sit amet consect adipisicing elit. Possimus magnam
+                voluptatum cupiditate veritatis in accusamus quisquam.
+            </p>
+        </div>
+        <div class="text-left py-12 md:px-8 flex flex-col md:flex-row flex-wrap justify-between">
+            <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
+                <div class="ml-16">
+                    <h1 class="text-gray-900 font-medium text-lg mb-2">Competitive exchange rates</h1>
+                    <p class="text-gray-500 text-base mb-2">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+                        impedit perferendis suscipit eaque, iste dolor cupiditate
+                        blanditiis ratione.
+                    </p>
+                </div>
+                <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
+                    <svg class="inline-block align-middle" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
+                    </svg>
+                </div>
+            </div>
+            <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
+                <div class="ml-16">
+                    <h1 class="text-gray-900 font-medium text-lg mb-2">No hidden fees</h1>
+                    <p class="text-gray-500 text-base mb-2">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+                        impedit perferendis suscipit eaque, iste dolor cupiditate
+                        blanditiis ratione.
+                    </p>
+                </div>
+                <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
+                      </svg>
+                </div>
+            </div>
+            <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
+                <div class="ml-16">
+                    <h1 class="text-gray-900 font-medium text-lg mb-2">Transfers are instant</h1>
+                    <p class="text-gray-500 text-base mb-2">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+                        impedit perferendis suscipit eaque, iste dolor cupiditate
+                        blanditiis ratione.
+                    </p>
+                </div>
+                <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
+                      </svg>
+                </div>
+            </div>
+            <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
+                <div class="ml-16">
+                    <h1 class="text-gray-900 font-medium text-lg mb-2">Mobile notifications</h1>
+                    <p class="text-gray-500 text-base mb-2">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores
+                        impedit perferendis suscipit eaque, iste dolor cupiditate
+                        blanditiis ratione.
+                    </p>
+                </div>
+                <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+                      </svg>
+                </div>
+            </div>
         </div>
     </section>
     <script src="js/main.js"></script>
