--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     </p>
                 </div>
                 <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
-                    <svg class="inline-block align-middle" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
-                        stroke="currentColor">
+                    <svg class="inline-block align-middle" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6"
+                        fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M21 12a9 9 0 01-9 9m9-9a9 9 0 00-9-9m9 9H3m9 9a9 9 0 01-9-9m9 9c1.657 0 3-4.03 3-9s-1.343-9-3-9m0 18c-1.657 0-3-4.03-3-9s1.343-9 3-9m-9 9a9 9 0 019-9" />
                     </svg>
@@ -106,9 +106,11 @@
                     </p>
                 </div>
                 <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" />
+                    </svg>
                 </div>
             </div>
             <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
@@ -121,9 +123,11 @@
                     </p>
                 </div>
                 <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M13 10V3L4 14h7v7l9-11h-7z" />
+                    </svg>
                 </div>
             </div>
             <div class="relative w-auto md:w-1/2 max-w-xl px-2 inline-block mx-auto my-6 flex-shrink-0">
@@ -136,12 +140,26 @@
                     </p>
                 </div>
                 <div class="absolute top-0 bg-indigo-600 w-10 p-2 rounded text-white">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
-                      </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
+                        stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M17 8h2a2 2 0 012 2v6a2 2 0 01-2 2h-2v4l-4-4H9a1.994 1.994 0 01-1.414-.586m0 0L11 14h4a2 2 0 002-2V6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2v4l.586-.586z" />
+                    </svg>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="bg-indigo-700 mx-4 py-10 px-4 md:mx-8 md:py-16 px-4 md:px-20 rounded-md my-8">
+        <h1 class="text-white text-4xl md:text-5xl font-bold mb-6">
+            Ready to dive in?<br>
+            Start you're free trial<br>
+            today.
+        </h1>
+        <p class="text-white text-opacity-80 max-w-2xl font-normal text-base md:text-lg mb-6">Lorem ipsum, dolor sit amet consectetur
+            adipisicing elit. Maiores
+            impedit perferendis suscipit eaque, iste dolor cupiditate
+            blanditiis ratione.</p>
+        <button class="bg-white hover:bg-gray-200 hover:text-indigo-700 text-indigo-600 text-opacity-90 text-base md:text-lg font-medium py-3 px-5 rounded-md">Sign up for free</button>
     </section>
     <script src="js/main.js"></script>
 </body>
