--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
         </nav>
         <div class="flex h-auto lg:h-[87.1vh] flex-wrap items-center">
             <div
-                class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10">
-                <h1 class="text-4xl md:text-6xl font-bold text-gray-900 w-full md:pr-10">
+                class="pt-10 md:py-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative flex-shrink-0 z-10 ">
+                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full md:pr-10">
                     Data to enrich your
-                    <span class="block text-indigo-700">online business</span>
+                    <span class="block text-indigo-700 mt-2">online business</span>
                 </h1>
                 <p class="font-normal text-gray-500 text-base lg:text-xl my-4 w-full md:pr-20">
                     Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui
@@ -155,11 +155,144 @@
             Start you're free trial<br>
             today.
         </h1>
-        <p class="text-white text-opacity-80 max-w-2xl font-normal text-base md:text-lg mb-6">Lorem ipsum, dolor sit amet consectetur
+        <p class="text-white text-opacity-80 max-w-2xl font-normal text-base md:text-lg mb-6">Lorem ipsum, dolor sit
+            amet consectetur
             adipisicing elit. Maiores
             impedit perferendis suscipit eaque, iste dolor cupiditate
             blanditiis ratione.</p>
-        <button class="bg-white hover:bg-gray-200 hover:text-indigo-700 text-indigo-600 text-opacity-90 text-base md:text-lg font-medium py-3 px-5 rounded-md">Sign up for free</button>
+        <button
+            class="bg-white hover:bg-gray-200 hover:text-indigo-700 text-indigo-600 text-opacity-90 text-base md:text-lg font-medium py-3 px-5 rounded-md">Sign
+            up for free</button>
+    </section>
+    <section class="py-6 px-4 md:py-12 md:px-6">
+        <div class="flex flex-col flex-wrap">
+            <h1 class="text-4xl md:text-5xl text-gray-900 font-bold text-center mb-4">Pricing Plans</h1>
+            <p class="text-gray-500 text-base md:text-xl text-center mb-6 font-normal">Start building for free, then add
+                a site plan to go live. Account plans unlock additional features.</p>
+            <div class="w-auto mx-auto border-2 bg-gray-200 rounded-md inline-block">
+                <button class="bg-gray-200 px-5 py-2 text-center text-gray-700 font-medium">Montly</button>
+                <button
+                    class="bg-white px-5 py-2 text-center text-gray-700 font-medium border rounded-md">Yearly</button>
+            </div>
+        </div>
+        <div class="flex flex-wrap justify-between py-20">
+            <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                    <h1 class="text-xl text-gray-800 font-medium mb-2">Hobby</h1>
+                    <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
+                    <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$12<span
+                            class="text-gray-500 text-sm font-normal">/mo</span></p>
+                    <button
+                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        Hobby</button>
+                    <hr>
+                    <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                    <h1 class="text-xl text-gray-800 font-medium mb-2">Freelancer</h1>
+                    <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
+                    <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$24<span
+                            class="text-gray-500 text-sm font-normal">/mo</span></p>
+                    <button
+                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        Freelancer</button>
+                    <hr>
+                    <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                    <h1 class="text-xl text-gray-800 font-medium mb-2">Startup</h1>
+                    <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
+                    <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$32<span
+                            class="text-gray-500 text-sm font-normal">/mo</span></p>
+                    <button
+                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        Startup</button>
+                    <hr>
+                    <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+            <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                    <h1 class="text-xl text-gray-800 font-medium mb-2">Enterprice</h1>
+                    <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
+                    <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$48<span
+                            class="text-gray-500 text-sm font-normal">/mo</span></p>
+                    <button
+                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        Enterprice</button>
+                    <hr>
+                    <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                    <div class="relative">
+                        <p class="ml-8 text-gray-900 text-medium">Lorem Ipsum is simply dummy text of the printing and
+                            typesetting.</p>
+                        <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
+                            class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                        </svg>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="js/main.js"></script>
 </body>
