--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$12<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
                         Hobby</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -206,13 +206,13 @@
                 </div>
             </div>
             <div class="w-full sm:w-1/2 lg:w-1/4 h-auto sm:px-4 py-4">
-                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-6">
+                <div class="border border-gray-300 h-full rounded-md px-4 md:px-6 py-8">
                     <h1 class="text-xl text-gray-800 font-medium mb-2">Freelancer</h1>
                     <p class="text-base text-gray-500 mb-2">All the basic for starting a bussiness</p>
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$24<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
                         Freelancer</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -241,7 +241,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$32<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
                         Startup</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -270,7 +270,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$48<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
                         Enterprice</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
