--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <section class="">
         <nav class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 relative mx-auto">
-            <a class="w-8 mr-6" href="#"><img src="/images/workflow-mark-indigo-600.svg" /></a>
+            <a class="w-8 mr-6" href="#"><img src="./images/workflow-mark-indigo-600.svg" /></a>
             <div class="text-base lg:text-lg hidden md:inline-block">
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Product</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Feature</a>
