improve index.html

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-indigo-700 mx-4 py-10 px-4 md:mx-8 md:py-16 px-4 md:px-20 rounded-md my-8">
+    <section class="bg-indigo-700 mx-4 py-10 px-4 md:mx-8 md:py-16 md:px-20 rounded-md my-8">
         <h1 class="text-white text-4xl md:text-5xl font-bold mb-6">
             Ready to dive in?<br>
             Start you're free trial<br>
@@ -183,7 +183,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$12<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium  py-2 px-4 rounded-md mb-4">Buy
                         Hobby</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -212,7 +212,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$24<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium py-2 px-4 rounded-md mb-4">Buy
                         Freelancer</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -241,7 +241,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$32<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium  py-2 px-4 rounded-md mb-4">Buy
                         Startup</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
@@ -270,7 +270,7 @@
                     <p class="text-3xl md:text-4xl font-semibold md:font-bold text-gray-900 mb-2">$48<span
                             class="text-gray-500 text-sm font-normal">/mo</span></p>
                     <button
-                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium mb-2 py-2 px-4 rounded-md mb-4">Buy
+                        class="bg-indigo-700 hover:bg-indigo-800 text-center md:w-full text-white font-medium  py-2 px-4 rounded-md mb-4">Buy
                         Enterprice</button>
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
