add footer and some style changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <section class="max-w-screen-2xl mx-auto">
         <nav class="flex justify-between md:justify-start py-4 px-4 md:py-8 md:px-12 relative mx-auto">
-            <a class="w-8 mr-6" href="#"><img src="./images/workflow-mark-indigo-600.svg" /></a>
+            <a class="w-12 mr-6" href="#"><img src="./images/workflow-mark-indigo-600.svg" /></a>
             <div class="text-base lg:text-lg hidden md:inline-block">
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Product</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Feature</a>
@@ -164,7 +164,7 @@
                 up for free</button>
         </div>
     </section>
-    <section class="py-6 px-4 md:py-12 md:px-6">
+    <section class="py-6 px-4 md:py-12 md:px-6 max-w-screen-2xl mx-auto">
         <div class="flex flex-col flex-wrap">
             <h1 class="text-4xl md:text-5xl text-gray-900 font-bold text-center mb-4">Pricing Plans</h1>
             <p class="text-gray-500 text-base md:text-xl text-center mb-6 font-normal">Start building for free, then add
@@ -294,7 +294,46 @@
             </div>
         </div>
     </section>
+    <footer class="max-w-screen-2xl mx-auto flex flex-wrap justify-between md:justify-start lg:justify-between px-4 md:px-6 py-10 border-t-2 border-gray-200 mt-2">
+            <div class="w-96 m-2 md:m-4">
+                <a class="w-12 mr-6 inline-block mb-6" href="#"><img class="w-full" src="./images/workflow-mark-indigo-600.svg" /></a>
+                <p class="text-gray-500 font-normal text-base md:text-lg mb-8">Making the world place through constructing elegant hierarchies.</p>
+                <div class="">
+                    <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg class="text-gray-400 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 167.657 167.657"><path d="M83.829.349C37.532.349 0 37.881 0 84.178c0 41.523 30.222 75.911 69.848 82.57v-65.081H49.626v-23.42h20.222V60.978c0-20.037 12.238-30.956 30.115-30.956 8.562 0 15.92.638 18.056.919v20.944l-12.399.006c-9.72 0-11.594 4.618-11.594 11.397v14.947h23.193l-3.025 23.42H94.026v65.653c41.476-5.048 73.631-40.312 73.631-83.154 0-46.273-37.532-83.805-83.828-83.805z" fill="currentColor"/></svg></a>
+                    <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg class="text-gray-400 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 511 511.9"><path d="M510.95 150.5c-1.2-27.2-5.598-45.898-11.9-62.102-6.5-17.199-16.5-32.597-29.6-45.398-12.802-13-28.302-23.102-45.302-29.5-16.296-6.3-34.898-10.7-62.097-11.898C334.648.3 325.949 0 256.449 0s-78.199.3-105.5 1.5c-27.199 1.2-45.898 5.602-62.097 11.898-17.204 6.5-32.602 16.5-45.403 29.602-13 12.8-23.097 28.3-29.5 45.3-6.3 16.302-10.699 34.9-11.898 62.098C.75 177.801.449 186.5.449 256s.301 78.2 1.5 105.5c1.2 27.2 5.602 45.898 11.903 62.102 6.5 17.199 16.597 32.597 29.597 45.398 12.801 13 28.301 23.102 45.301 29.5 16.3 6.3 34.898 10.7 62.102 11.898 27.296 1.204 36 1.5 105.5 1.5s78.199-.296 105.5-1.5c27.199-1.199 45.898-5.597 62.097-11.898a130.934 130.934 0 0074.903-74.898c6.296-16.301 10.699-34.903 11.898-62.102 1.2-27.3 1.5-36 1.5-105.5s-.102-78.2-1.3-105.5zm-46.098 209c-1.102 25-5.301 38.5-8.801 47.5-8.602 22.3-26.301 40-48.602 48.602-9 3.5-22.597 7.699-47.5 8.796-27 1.204-35.097 1.5-103.398 1.5s-76.5-.296-103.403-1.5c-25-1.097-38.5-5.296-47.5-8.796C94.551 451.5 84.45 445 76.25 436.5c-8.5-8.3-15-18.3-19.102-29.398-3.5-9-7.699-22.602-8.796-47.5-1.204-27-1.5-35.102-1.5-103.403s.296-76.5 1.5-103.398c1.097-25 5.296-38.5 8.796-47.5C61.25 94.199 67.75 84.1 76.352 75.898c8.296-8.5 18.296-15 29.398-19.097 9-3.5 22.602-7.7 47.5-8.801 27-1.2 35.102-1.5 103.398-1.5 68.403 0 76.5.3 103.403 1.5 25 1.102 38.5 5.3 47.5 8.8 11.097 4.098 21.199 10.598 29.398 19.098 8.5 8.301 15 18.301 19.102 29.403 3.5 9 7.699 22.597 8.8 47.5 1.2 27 1.5 35.097 1.5 103.398s-.3 76.301-1.5 103.301zm0 0"/><path d="M256.45 124.5c-72.598 0-131.5 58.898-131.5 131.5s58.902 131.5 131.5 131.5c72.6 0 131.5-58.898 131.5-131.5s-58.9-131.5-131.5-131.5zm0 216.8c-47.098 0-85.302-38.198-85.302-85.3s38.204-85.3 85.301-85.3c47.102 0 85.301 38.198 85.301 85.3s-38.2 85.3-85.3 85.3zm0 0M423.852 119.3c0 16.954-13.747 30.7-30.704 30.7-16.953 0-30.699-13.746-30.699-30.7 0-16.956 13.746-30.698 30.7-30.698 16.956 0 30.703 13.742 30.703 30.699zm0 0"/></svg></a>
+                    <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg class="text-gray-400 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M512 97.248c-19.04 8.352-39.328 13.888-60.48 16.576 21.76-12.992 38.368-33.408 46.176-58.016-20.288 12.096-42.688 20.64-66.56 25.408C411.872 60.704 384.416 48 354.464 48c-58.112 0-104.896 47.168-104.896 104.992 0 8.32.704 16.32 2.432 23.936-87.264-4.256-164.48-46.08-216.352-109.792-9.056 15.712-14.368 33.696-14.368 53.056 0 36.352 18.72 68.576 46.624 87.232-16.864-.32-33.408-5.216-47.424-12.928v1.152c0 51.008 36.384 93.376 84.096 103.136-8.544 2.336-17.856 3.456-27.52 3.456-6.72 0-13.504-.384-19.872-1.792 13.6 41.568 52.192 72.128 98.08 73.12-35.712 27.936-81.056 44.768-130.144 44.768-8.608 0-16.864-.384-25.12-1.44C46.496 446.88 101.6 464 161.024 464c193.152 0 298.752-160 298.752-298.688 0-4.64-.16-9.12-.384-13.568 20.832-14.784 38.336-33.248 52.608-54.496z"/></svg></a>
+                    <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg class="text-gray-400 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M12 .5C5.37.5 0 5.78 0 12.292c0 5.211 3.438 9.63 8.205 11.188.6.111.82-.254.82-.567 0-.28-.01-1.022-.015-2.005-3.338.711-4.042-1.582-4.042-1.582-.546-1.361-1.335-1.725-1.335-1.725-1.087-.731.084-.716.084-.716 1.205.082 1.838 1.215 1.838 1.215 1.07 1.803 2.809 1.282 3.495.981.108-.763.417-1.282.76-1.577-2.665-.295-5.466-1.309-5.466-5.827 0-1.287.465-2.339 1.235-3.164-.135-.298-.54-1.497.105-3.121 0 0 1.005-.316 3.3 1.209.96-.262 1.98-.392 3-.398 1.02.006 2.04.136 3 .398 2.28-1.525 3.285-1.209 3.285-1.209.645 1.624.24 2.823.12 3.121.765.825 1.23 1.877 1.23 3.164 0 4.53-2.805 5.527-5.475 5.817.42.354.81 1.077.81 2.182 0 1.578-.015 2.846-.015 3.229 0 .309.21.678.825.56C20.565 21.917 24 17.495 24 12.292 24 5.78 18.627.5 12 .5z"/></svg></a>
+                </div>
+            </div>
+        <ul class="w-32 text-gray-500 font-normal list-none my-8 mx-3 sm:mx-8 md:mx-3 inline-block text-base md:text-lg">
+            <h2 class="font-medium text-gray-400 text-lg mb-3">SOLUTION</h2>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Marketing</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Analytics</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Commerce</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Insights</a></li>
+        </ul>
+        <ul class="w-32 text-gray-500 font-normal list-none my-8 mx-3 sm:mx-8 md:mx-3 inline-block text-base md:text-lg">
+            <h2 class="font-medium text-gray-400 text-lg mb-3">SUPPORT</h2>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Pricing</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Documention</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Guides</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">API Status</a></li>
+        </ul>
+        <ul class="w-32 text-gray-500 font-normal list-none my-8 mx-3 sm:mx-8 md:mx-3 inline-block text-base md:text-lg">
+            <h2 class="font-medium text-gray-400 text-lg mb-3">COMPANY</h2>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">About</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Blog</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Jobs</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Press</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Partners</a></li>
+        </ul>
+        <ul class="w-32 text-gray-500 font-normal list-none my-8 mx-3 sm:mx-8 md:mx-3 inline-block text-base md:text-lg">
+            <h2 class="font-medium text-gray-400 text-lg mb-3">LEGAL</h2>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Claim</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Privacy</a></li>
+            <li class="mb-1"><a class="hover:text-gray-700" href="#">Terms</a></li>
+        </ul>
+    </footer>
     <script src="js/main.js"></script>
 </body>
-
 </html>
