--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
     </section>
     <footer
         class="max-w-screen-2xl mx-auto flex flex-wrap justify-between md:justify-start lg:justify-between px-4 md:px-6 py-10 border-t-2 border-gray-200 mt-2">
-        <div class="w-96 m-2 md:my-4 mx-8">
+        <div class="w-96 m-2 md:m-4 md:mx-8">
             <a class="w-12 mr-6 inline-block mb-6" href="#"><img class="w-full"
                     src="./images/workflow-mark-indigo-600.svg" /></a>
             <p class="text-gray-700 font-normal text-lg mb-8">Making the world place through constructing
