--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -214,7 +215,8 @@
                         </svg>
                     </div>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -235,7 +237,8 @@
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -243,7 +246,8 @@
                         </svg>
                     </div>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -264,7 +268,8 @@
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -272,7 +277,8 @@
                         </svg>
                     </div>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -293,7 +299,8 @@
                     <hr>
                     <p class="text-base text-gray-600 font-medium mt-4 mb-2">WHAT'S INCLUDED</p>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -301,7 +308,8 @@
                         </svg>
                     </div>
                     <div class="relative">
-                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing and
+                        <p class="ml-8 text-gray-800 text-medium mb-1">Lorem Ipsum is simply dummy text of the printing
+                            and
                             typesetting.</p>
                         <svg class="w-4 absolute top-2 text-indigo-600 mr-2" xmlns="http://www.w3.org/2000/svg"
                             class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -336,10 +344,10 @@
                             d="M256.45 124.5c-72.598 0-131.5 58.898-131.5 131.5s58.902 131.5 131.5 131.5c72.6 0 131.5-58.898 131.5-131.5s-58.9-131.5-131.5-131.5zm0 216.8c-47.098 0-85.302-38.198-85.302-85.3s38.204-85.3 85.301-85.3c47.102 0 85.301 38.198 85.301 85.3s-38.2 85.3-85.3 85.3zm0 0M423.852 119.3c0 16.954-13.747 30.7-30.704 30.7-16.953 0-30.699-13.746-30.699-30.7 0-16.956 13.746-30.698 30.7-30.698 16.956 0 30.703 13.742 30.703 30.699zm0 0" />
                     </svg></a>
                 <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg
-                        class="text-gray-500 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 512 512">
+                        class="text-gray-500 hover:text-gray-600 fill-current" viewBox="0 0 512 512"
+                        xmlns="http://www.w3.org/2000/svg">
                         <path
-                            d="M512 97.248c-19.04 8.352-39.328 13.888-60.48 16.576 21.76-12.992 38.368-33.408 46.176-58.016-20.288 12.096-42.688 20.64-66.56 25.408C411.872 60.704 384.416 48 354.464 48c-58.112 0-104.896 47.168-104.896 104.992 0 8.32.704 16.32 2.432 23.936-87.264-4.256-164.48-46.08-216.352-109.792-9.056 15.712-14.368 33.696-14.368 53.056 0 36.352 18.72 68.576 46.624 87.232-16.864-.32-33.408-5.216-47.424-12.928v1.152c0 51.008 36.384 93.376 84.096 103.136-8.544 2.336-17.856 3.456-27.52 3.456-6.72 0-13.504-.384-19.872-1.792 13.6 41.568 52.192 72.128 98.08 73.12-35.712 27.936-81.056 44.768-130.144 44.768-8.608 0-16.864-.384-25.12-1.44C46.496 446.88 101.6 464 161.024 464c193.152 0 298.752-160 298.752-298.688 0-4.64-.16-9.12-.384-13.568 20.832-14.784 38.336-33.248 52.608-54.496z" />
+                            d="M256 0C114.637 0 0 114.637 0 256s114.637 256 256 256 256-114.637 256-256S397.363 0 256 0zm116.887 199.602c.113 2.52.168 5.05.168 7.593 0 77.645-59.102 167.18-167.184 167.184h.004-.004c-33.184 0-64.062-9.727-90.066-26.395 4.597.543 9.277.813 14.015.813 27.532 0 52.868-9.39 72.98-25.152-25.722-.477-47.41-17.465-54.894-40.813a58.481 58.481 0 0011.043 1.063c5.363 0 10.559-.723 15.496-2.07-26.886-5.384-47.14-29.145-47.14-57.598 0-.266 0-.504.007-.75a58.354 58.354 0 0026.614 7.347c-15.778-10.527-26.149-28.523-26.149-48.91a58.597 58.597 0 017.957-29.535c28.977 35.555 72.282 58.937 121.118 61.394a58.708 58.708 0 01-1.528-13.398c0-32.437 26.317-58.754 58.766-58.754 16.902 0 32.168 7.145 42.89 18.567a117.855 117.855 0 0037.313-14.262c-4.395 13.715-13.707 25.222-25.84 32.5 11.887-1.422 23.215-4.574 33.742-9.254a119.412 119.412 0 01-29.308 30.43zm0 0" />
                     </svg></a>
                 <a class="inline-block w-6 mx-1 md:mx-3" href="#"><svg
                         class="text-gray-500 hover:text-gray-600 fill-current" xmlns="http://www.w3.org/2000/svg"
