--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a
                     class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Marketplace</a>
                 <a class="text-gray-500 hover:text-gray-900 font-normal mr-8 align-middle cursor-pointer">Company</a>
-                <a class="text-indigo-800 hover:text-indigo-600 font-normal align-middle cursor-pointer">Log in</a>
+                <a href="./login.html" class="text-indigo-800 hover:text-indigo-600 font-normal align-middle cursor-pointer">Log in</a>
             </div>
             <button class="md:hidden focus-within:outline-none" data-btnOpen="navBtn" class="">
                 <svg xmlns="http://www.w3.org/2000/svg"
@@ -55,7 +55,7 @@
                         <li class="mb-2 mx-2 hover:text-gray-800 hover:bg-gray-100 p-1"><a href="#">Company</a></li>
                         <li
                             class="mb-2 mx-2 text-center font-medium text-indigo-800 hover:text-indigo-600 hover:bg-gray-100 p-1">
-                            <a href="#">Login</a>
+                            <a href="./login.html">Login</a>
                         </li>
                     </ul>
                 </div>
