improve hero section

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         <div class="flex h-auto lg:h-[87.1vh] flex-wrap items-center">
             <div
                 class="py-10 md:pt-20 px-4 lg:pt-44 lg:pl-16 w-full lg:w-1/2 lg:h-full inline-block relative">
-                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full md:pr-10 text-center lg:text-left">
+                <h1 class="text-5xl md:text-6xl font-bold text-gray-900 w-full md:pr-10 text-center lg:text-left md:w-4/5 mx-auto lg:w-auto">
                     Data to enrich your
-                    <span class="block text-indigo-700 mt-2">online business</span>
+                    <span class="inline sm:block md:inline lg:block text-indigo-700 mt-2">online business</span>
                 </h1>
                 <p class="font-normal text-gray-500 text-base lg:text-xl my-4 w-full md:pr-20 text-center lg:text-left md:w-4/5 lg:w-auto mx-auto">
                     Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui
